--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "@lowcodeunit/lcu-api-npm-public",
   "version": "0.0.0",
   "dependencies": {
+    "@fathym-it/forge": "0.0.64",
     "azure-storage": "^2.10.2",
+    "download-npm-package": "^3.1.12",
     "exeq": "^3.0.0",
-    "npm": "^6.5.0"
+    "fs-extra": "^7.0.1",
+    "npm": "^6.5.0",
+    "recursive-readdir": "^2.2.2"
   }
 }
