--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "dependencies": {
     "@fathym-it/forge": "0.0.64",
+    "axios": "^0.18.0",
     "azure-storage": "^2.10.2",
     "download-npm-package": "^3.1.12",
     "exeq": "^3.0.0",
     "fs-extra": "^7.0.1",
     "npm": "^6.5.0",
+    "npm-registry-client": "^8.6.0",
     "recursive-readdir": "^2.2.2"
   }
 }
