--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fs-extra": "^7.0.1",
     "npm": "^6.5.0",
     "npm-registry-client": "^8.6.0",
-    "recursive-readdir": "^2.2.2"
+    "recursive-readdir": "^2.2.2",
+    "rimraf": "^2.6.3"
   }
 }
