--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,8 @@
 {
-  "azureFunctions.projectRuntime": "~2",
-  "azureFunctions.projectLanguage": "JavaScript",
-  "azureFunctions.templateFilter": "Verified",
-  "azureFunctions.deploySubpath": ".",
-  "azureFunctions.preDeployTask": "installExtensions",
-  "files.exclude": {
-    "obj": true,
-    "bin": true
-  },
-  "debug.internalConsoleOptions": "neverOpen"
+    "azureFunctions.deploySubpath": ".",
+    "azureFunctions.postDeployTask": "npm install",
+    "azureFunctions.projectLanguage": "JavaScript",
+    "azureFunctions.projectRuntime": "~3",
+    "debug.internalConsoleOptions": "neverOpen",
+    "azureFunctions.preDeployTask": "npm prune"
 }
