--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "@lowcodeunit/lcu-api-npm-public",
-  "version": "0.0.0",
+  "name": "lcu-api-npm-public",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "start": "func start",
+    "test": "echo \"No tests yet...\""
+  },
   "dependencies": {
-    "@fathym-it/forge": "0.0.64",
-    "axios": "^0.18.0",
-    "azure-storage": "^2.10.2",
+    "axios": "^0.20.0",
+    "azure-storage": "^2.10.3",
     "download-npm-package": "^3.1.12",
     "exeq": "^3.0.0",
-    "fs-extra": "^7.0.1",
-    "npm": "^6.5.0",
-    "npm-registry-client": "^8.6.0",
-    "recursive-readdir": "^2.2.2",
-    "rimraf": "^2.6.3"
-  }
+    "fs-extra": "^9.0.1",
+    "recursive-readdir": "^2.2.2"
+  },
+  "devDependencies": {}
 }
